# mtp

./: .gitignore  .gitmodules  MUJOCO_LOG.TXT  README.md  pyproject.toml
examples/: crane.py  cube.py  double_cart_pole.py  g1_mocap.py  g1_standup.py  navigation.py  pendulum.py  pusht.py  walker.py
mtp/: files.py  mtp.py
mtp/splines/: akima.py  bsplines.py
scripts/: plot_splines.py
