[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]

name = "mtp"
dependencies = [
  "matplotlib",
  "tqdm",
  "jax[cuda12]>=0.6.0,<=0.6.1",
  "jaxlib[cuda12]>=0.6.0,<=0.6.1",
  "nvidia-cublas-cu12==12.9.0.13",
  "joblib",
  "chrono",
]
requires-python = ">= 3.12"

authors = [
  {name = "An T. Le", email = "an.thai.le97@gmail.com"},
]
description = "Implementation of MTP."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["MPC", "Tensor", "MuJoCo", "JAX", "Vectorization"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

[tool.setuptools.packages.find]
include = ["hydrax", "mtp"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
